--- a/rundmc-in-a-jupyter-notebook.html
+++ b/rundmc-in-a-jupyter-notebook.html
@@ -2673,7 +2673,7 @@ For that download the zip file from the <a href="https://osf.io/njsqa/">latest D
 </code></pre>
 <p>Et voilà ! You're ready to go and use runDMC and the associated tutorials :)</p>
 <p>Let me know in case you run into troubles.</p>
-<p>See below for an example of the notebook taken from DMC tutorial dmc_1_5_ddm.R :</p>
+<p>See below (or <a href="https://github.com/GWeindel/gweindel.github.io-src/blob/master/content/posts/runDMC.ipynb">download it here</a>) for an example of the notebook taken from DMC tutorial dmc_1_5_ddm.R :</p>
 
 </div>
 </div>
