Updated footer + site description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <meta name="author" content="GABRIEL WEINDEL" />
 
 
-            <meta name="description" content="Blog posts, thoughts and resources about cognitive sciences" />
+            <meta name="description" content="Blog posts, thoughts and resources" />
 
                 <meta property="og:type" content="article" />
             <meta name="twitter:card" content="summary"/>
@@ -100,7 +100,7 @@
         <div id="wrap" class="mb-5">
     <div class="col masthead" align="center" style="background-image: url('/theme/img/stone.png')">
         <h1>Gabriel Weindel's webpage</h1>
-        <h5>Blog posts, thoughts and resources about cognitive sciences</h5>
+        <h5>Blog posts, thoughts and resources</h5>
     </div>
     <div id="post-container" class="container post index">
             <article>
@@ -184,7 +184,7 @@
          <div class="col">
             <h5 class="headin5_amrc col_white_amrc pt2"></h5>
             <!--headin5_amrc-->
-            <p class="mb10"><img id="profile_img" align="left" src="/theme/img/profile.png">Welcome ! My name is Gabriel Weindel and I am a cognitive scientist currently working at Aix Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives. As a researcher my interest goes to the test and application of mathematical cognitive models to the general population or to populations with cognitive deficits. See the About page for my resume.</p>
+            <p class="mb10"><img id="profile_img" align="left" src="/theme/img/profile.png">Welcome ! My name is Gabriel Weindel (he/him) and I am a cognitive scientist currently working at Aix Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives.  See the About page for more infos and below for my email.</p>
             <p><i class="fa fa-envelope mr-2"></i>firstname.lastname[at]gmail.com</p>
          </div>
       </div>
