--- a/introducing-myself.html
+++ b/introducing-myself.html
@@ -89,8 +89,10 @@
     <h1>Introducing myself</h1>
     
 
-    <p>My name is Gabriel Weindel and I am a cognitive scientist currently working at Aix-Marseille Université in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives. </p>
-<p>As a researcher my interest goes to the test and application of mathematical cognitive models to the general population or to populations with cognitive deficits.</p>
+    <p>My name is Gabriel Weindel and I am a cognitive scientist currently working at Aix-Marseille Université (France) in the Laboratoire de Psychologie Cognitive and Laboratoire de Neurosciences Cognitives. </p>
+<p>I am specialized in, and fond of, mental chronometry. This field of cognitive sciences, as I define it, addresses the question of the timing of information processing operated by the cognitive system implemented by our brains.
+As a researcher my interest 
+goes to the test and application of mathematical cognitive models to the general population or to populations with cognitive deficits.</p>
 <p>For a detailed summary of my curriculm see my <a href="pdfs/CV_GW.pdf">CV</a></p>
 
         <p>
