new post + deletion

--- a/phd.html
+++ b/phd.html
@@ -155,6 +155,7 @@
         <aside>
         <nav>
         <ul class="articles-timeline">
+            <li class="previous-article">« <a href="/a-surprising-link-between-electrophysiological-data-in-monkeys-and-a-behavioral-model-in-humans" title="Previous: A surprising link between electrophysiological data in monkeys and a behavioral model in humans">A surprising link between electrophysiological data in monkeys and a behavioral model in humans</a></li>
             <li class="next-article"><a href="/lecture-on-linear-mixed-models" title="Next: Lecture on Linear Mixed Models">Lecture on Linear Mixed Models</a> »</li>
         </ul>
         </nav>
