--- a/rundmc-in-a-jupyter-notebook.html
+++ b/rundmc-in-a-jupyter-notebook.html
@@ -8629,6 +8629,7 @@ height=420
         <nav>
         <ul class="articles-timeline">
             <li class="previous-article">« <a href="/lecture-on-linear-mixed-models" title="Previous: Lecture on Linear Mixed Models">Lecture on Linear Mixed Models</a></li>
+            <li class="next-article"><a href="/a-surprising-link-between-electrophysiological-data-in-monkeys-and-a-behavioral-model-in-humans" title="Next: A surprising link between electrophysiological data in monkeys and a behavioral model in humans">A surprising link between electrophysiological data in monkeys and a behavioral model in humans</a> »</li>
         </ul>
         </nav>
         </aside>
