sharing on tweeter fix

--- a/a-surprising-link-between-electrophysiological-data-in-monkeys-and-a-behavioral-model-in-humans.html
+++ b/a-surprising-link-between-electrophysiological-data-in-monkeys-and-a-behavioral-model-in-humans.html
@@ -1252,7 +1252,7 @@ h6:hover .anchor-link {
  .highlight pre  .il { color: #666666 } /* Literal.Number.Integer.Long */</style><div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img align="center" src="https://github.com/GWeindel/gweindel.github.io-src/raw/master/content/resources/img/Macaca_mulatta.jpg" scale="20%"></p>
+<p><a href="https://twitter.com/intent/tweet?url=https://gweindel.github.io/a-surprising-link-between-electrophysiological-data-in-monkeys-and-a-behavioral-model-in-humans&text=# A surprising link between electrophysiological data in monkeys and a behavioral model in humans" target="_blank"><img align="center" src="https://github.com/GWeindel/gweindel.github.io-src/raw/master/content/resources/img/Macaca_mulatta.jpg" scale="20%"/></a></p>
 
 </div>
 </div>
