featured img path fix

--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
     <meta name="twitter:description" content=""/>
     <meta property="og:site_name" content="Gabriel Weindel&#39;s webpage" />
     <meta property="og:article:author" content="GABRIEL WEINDEL" />
-        <meta property="og:image" content="/img/stone.png" />
-        <meta name="twitter:image" content="/img/stone.png"/>
+        <meta property="og:image" content="theme/img/stone.png" />
+        <meta name="twitter:image" content="theme/img/stone.png"/>
 
         <title>    About Gabriel | Gabriel Weindel&#39;s webpage
 </title>
