--- a/archives.html
+++ b/archives.html
@@ -24,8 +24,8 @@
     <meta name="twitter:description" content="Archives of the posts"/>
     <meta property="og:site_name" content="Gabriel Weindel&#39;s webpage" />
     <meta property="og:article:author" content="GABRIEL WEINDEL" />
-        <meta property="og:image" content="/img/stone.png" />
-        <meta name="twitter:image" content="/img/stone.png"/>
+        <meta property="og:image" content="theme/img/stone.png" />
+        <meta name="twitter:image" content="theme/img/stone.png"/>
 
         <title>    All Posts | Gabriel Weindel&#39;s webpage
 </title>
